created tests to all services